# genetic_algorithm-app

./: .gitignore  README  configure.ac
src/: Makefile.am  fitness.c  main.c
